fix displaying the number of evacuation queues